boinc (5.8.17-2) unstable; urgency=low

  * NOT RELEASED YET
  * debian/control:
    - Extended boinc-manager's long description.
    - Added libcurl4-openssl-dev to Build-Depends because the libcurl packages
      have bumped sonames. The B-D on libcurl3-openssl-dev remains as
      alternative dependency to ease backporting to etch. (closes: #424501)
  * Updated all BOINC URLs to point to their new location in the official
    BOINC wiki according to http://boinc.berkeley.edu/trac/wiki/FileList.
  * debian/boinc-dev.{install,links}: Install lib/common_defs.h header to fix
    a FTBFS of boinc-app-seti with boinc-dev/5.8.17-1. This was discovered by
    Lucas Nussbaum's archive rebuild. (closes: #422643)

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 16 May 2007 10:56:53 +0200

boinc (5.8.17-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - BOINC Manager:
      - Broadened "Options" dialog so that labels does not get truncated.
        (closes: #389840)
      - Display project names in "Reset Project" dialog correctly. (LP: #83708)
      - Fixed run mode entries in "Activity" menu. (LP: #93850)
  * debian/control:
    - Bumped versioned Build-Depends on libcurl3-openssl-dev to >= 7.15.5
      which is required for the bandwith-throttling feature. Also removed the
      alternative on libcurl-ssl-dev because this was only added to aid
      backporting BOINC to sarge but sarge has only libcurl3-dev/7.13.2.
    - Added libxml2-utils to Build-Depends for xmllint which is used in the
      unit-test target in debian/rules.
  * debian/rules:
    - Added the unit-test target which uses xmllint to check if the XML
      conffiles cc_config.xml and global_prefs_override.xml are well-formed.
    - Since backporting to sarge is not possible any more, also removed the
      compatibility code for sarge's version of dpkg-architecture.
    - On ppc64 use ppc64-linux-gnu as BOINC platform (which is the official